# presenterm-export

./: LICENSE.txt  README.md  pyproject.toml
presenterm_export/: capture.py  cli.py  html.py  image.py  pdf.py
